User Delete add

--- a/IslahGroup/IslahGroup.csproj
+++ b/IslahGroup/IslahGroup.csproj
@@ -73,6 +73,7 @@
     <Content Include="Admin\DeleteDeposit.aspx" />
     <Content Include="Admin\DeleteExpenditure.aspx" />
     <Content Include="Admin\DeleteInvest.aspx" />
+    <Content Include="Admin\DeleteUser.aspx" />
     <Content Include="Admin\Expenditure.aspx" />
     <Content Include="Admin\InvestorDetails.aspx" />
     <Content Include="Admin\Investors.aspx" />
@@ -242,6 +243,13 @@
     </Compile>
     <Compile Include="Admin\DeleteInvest.aspx.designer.cs">
       <DependentUpon>DeleteInvest.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\DeleteUser.aspx.cs">
+      <DependentUpon>DeleteUser.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\DeleteUser.aspx.designer.cs">
+      <DependentUpon>DeleteUser.aspx</DependentUpon>
     </Compile>
     <Compile Include="Admin\Expenditure.aspx.cs">
       <DependentUpon>Expenditure.aspx</DependentUpon>
