--- a/IslahGroup/IslahGroup.csproj
+++ b/IslahGroup/IslahGroup.csproj
@@ -106,10 +106,6 @@
     <Content Include="Contact.aspx" />
     <Content Include="Content\animate.css" />
     <Content Include="Content\animate.min.css" />
-    <Content Include="Content\blueimp-gallery-indicator.css" />
-    <Content Include="Content\blueimp-gallery.css" />
-    <Content Include="Content\blueimp-gallery.min.css" />
-    <Content Include="Content\bootstrap.css" />
     <Content Include="Content\cssanimation.min.css" />
     <Content Include="Content\day-night.css" />
     <Content Include="Content\jquery-ui.css" />
@@ -149,13 +145,7 @@
     <Content Include="Masters\CMSMaster.Master" />
     <None Include="packages.config" />
     <Content Include="RegisterMember.aspx" />
-    <Content Include="Scripts\blueimp-gallery-fullscreen.js" />
-    <Content Include="Scripts\blueimp-gallery-indicator.js" />
-    <Content Include="Scripts\blueimp-gallery-video.js" />
-    <Content Include="Scripts\blueimp-gallery-youtube.js" />
-    <Content Include="Scripts\blueimp-gallery.js" />
-    <Content Include="Scripts\blueimp-gallery.min.js" />
-    <Content Include="Scripts\blueimp-helper.js" />
+    <Content Include="Scripts\blocs.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\chart.js\Chart.js" />
@@ -191,6 +181,7 @@
     <Content Include="Scripts\jquery-ui.min.js" />
     <Content Include="Scripts\jquery.blueimp-gallery.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.touchSwipe.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\main.js" />
