--- a/IslahGroup/IslahGroup.csproj
+++ b/IslahGroup/IslahGroup.csproj
@@ -106,6 +106,7 @@
     <Content Include="Contact.aspx" />
     <Content Include="Content\animate.css" />
     <Content Include="Content\animate.min.css" />
+    <Content Include="Content\bootstrap.css" />
     <Content Include="Content\cssanimation.min.css" />
     <Content Include="Content\day-night.css" />
     <Content Include="Content\jquery-ui.css" />
