--- a/IslahGroupInventory/IslahGroupInventory.csproj
+++ b/IslahGroupInventory/IslahGroupInventory.csproj
@@ -90,6 +90,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewControls\RawMaterialControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewControls\RawMaterialControl.Designer.cs">
+      <DependentUpon>RawMaterialControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewControls\UsersControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -116,6 +122,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ViewControls\RawMaterialControl.resx">
+      <DependentUpon>RawMaterialControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ViewControls\UsersControl.resx">
       <DependentUpon>UsersControl.cs</DependentUpon>
     </EmbeddedResource>
