--- a/IslahGroupInventory/IslahGroupInventory.csproj
+++ b/IslahGroupInventory/IslahGroupInventory.csproj
@@ -108,6 +108,12 @@
     <Compile Include="ViewControls\RawMaterialControl.Designer.cs">
       <DependentUpon>RawMaterialControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewControls\StocksControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewControls\StocksControl.Designer.cs">
+      <DependentUpon>StocksControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewControls\UsersControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -142,6 +148,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ViewControls\RawMaterialControl.resx">
       <DependentUpon>RawMaterialControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewControls\StocksControl.resx">
+      <DependentUpon>StocksControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewControls\UsersControl.resx">
       <DependentUpon>UsersControl.cs</DependentUpon>
