--- a/IslahGroupInventory/IslahGroupInventory.csproj
+++ b/IslahGroupInventory/IslahGroupInventory.csproj
@@ -132,6 +132,12 @@
     <Compile Include="ViewControls\StocksControl.Designer.cs">
       <DependentUpon>StocksControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewControls\SuppliersControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewControls\SuppliersControl.Designer.cs">
+      <DependentUpon>SuppliersControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewControls\UsersControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -184,6 +190,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ViewControls\StocksControl.resx">
       <DependentUpon>StocksControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewControls\SuppliersControl.resx">
+      <DependentUpon>SuppliersControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewControls\UsersControl.resx">
       <DependentUpon>UsersControl.cs</DependentUpon>
