--- a/IslahGroupInventory/IslahGroupInventory.csproj
+++ b/IslahGroupInventory/IslahGroupInventory.csproj
@@ -90,6 +90,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewControls\BarcodeControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewControls\BarcodeControl.Designer.cs">
+      <DependentUpon>BarcodeControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewControls\CustomersControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -170,6 +176,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ViewControls\BarcodeControl.resx">
+      <DependentUpon>BarcodeControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ViewControls\CustomersControl.resx">
       <DependentUpon>CustomersControl.cs</DependentUpon>
     </EmbeddedResource>
