Database Updated and BranchInfo Class add

--- a/IslahGroupInventory/IslahGroupInventory.csproj
+++ b/IslahGroupInventory/IslahGroupInventory.csproj
@@ -71,6 +71,7 @@
     <Compile Include="BarcodePrint.Designer.cs">
       <DependentUpon>BarcodePrint.cs</DependentUpon>
     </Compile>
+    <Compile Include="BranchInfo.cs" />
     <Compile Include="InventoryDataClasses.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
