--- a/DXApplication1/POS/POS.csproj
+++ b/DXApplication1/POS/POS.csproj
@@ -74,6 +74,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewControls\CustomerViewControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewControls\CustomerViewControl.Designer.cs">
+      <DependentUpon>CustomerViewControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewControls\ProductViewControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -99,6 +105,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ViewControls\CustomerViewControl.resx">
+      <DependentUpon>CustomerViewControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ViewControls\ProductViewControl.resx">
       <DependentUpon>ProductViewControl.cs</DependentUpon>
     </EmbeddedResource>
